tests/NormalTests/paczka1/fuzzy1/20631508.err
Error in line 3: F6p S257 72,8
Error in line 10: 3Ad3En S274 6,7
Error in line 17: S870 A754 407,2
Error in line 29: W7Ywmpx3s S274 330,7
Error in line 28: m1zh A754 88,6
Error in line 31: m1zh S257 98,8
Error in line 34: m1zh S870 40,9
